# JukeBox

./: .gitignore  CHANGELOG.md  LICENSE-MIT.md  README.md
.github/workflows/: build-case.yaml  build-desktop.yaml  build-firmware.yaml  build-hardware-case.yaml  build-hardware-pcb.yaml  build-pcb.yaml  build-software.yaml
assets/: README.md  logo.soda  textlogo.soda
case/: build.sh  case.scad
desktop/: Cargo.toml  Cross.toml  build.rs
desktop/locales/: en.yml
desktop/src/: config.rs  firmware_update.rs  input.rs  main.rs  serial.rs  software_update.rs  splash.rs  system.rs
desktop/src/actions/: action.rs  discord.rs  input.rs  meta.rs  mod.rs  obs.rs  soundboard.rs  system.rs  types.rs
desktop/src/gui/: action.rs  device.rs  gui.rs  mod.rs  profiles.rs  rgb.rs  screen.rs  settings.rs  update.rs
docs/: flashing-firmware.md  getting-started.md  linux-compatibility.md  program-compatibility.md  troubleshooting.md  updating-device.md  windows-compatibility.md
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: identify.rs  keypad.rs  main.rs  mutex.rs  peripheral.rs  rgb.rs  screen.rs  serial.rs  st7789.rs  uid.rs  usb.rs  util.rs
firmware/src/modules/: eeprom.rs  keyboard.rs  led.rs  pedals.rs  rgb.rs  screen.rs  serial.rs
pcb/: .gitignore  JukeBox.kicad_dru  JukeBox.kicad_pcb  JukeBox.kicad_pro  JukeBox.kicad_sch  fp-lib-table  sym-lib-table
pcb/footprints/: FFC2B35-22-G_REVA2.step  FH34SRJ-22S-0.5SH_50_.step
pcb/footprints/JukeBox.pretty/: ALLKEY.kicad_mod  FTI.kicad_mod  HRS_FH34SRJ-22S-0.5SH_50_.kicad_mod  JukeBox.kicad_mod  L_pol_2016.kicad_mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  TFTQ-T20ST22ZP01.kicad_mod  st7789v.kicad_mod
pcb/symbols/: TFTQ-T20ST22ZP01.kicad_sym  st7789v.kicad_sym
software/: Cargo.toml  README.md
software/jukebox_util/src/: color.rs  peripheral.rs  protocol.rs
software/locales/: en.yml
software/src/: action.rs  config.rs  gui.rs  input.rs  main.rs  reaction.rs  serial.rs  update.rs
software/src/actions/: action.rs  discord.rs  input.rs  meta.rs  obs.rs  soundboard.rs  system.rs  types.rs
software/src/gui/: action.rs  device.rs  gui.rs  mod.rs  profiles.rs  rgb.rs  settings.rs  update.rs
software/src/reactions/: discord.rs  input.rs  meta.rs  obs.rs  soundboard.rs  system.rs  types.rs
util/: Cargo.toml
util/src/: color.rs  input.rs  lib.rs  peripheral.rs  protocol.rs  rgb.rs  screen.rs  smallstr.rs  stats.rs
