[package]
name = "jukebox_desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
jukebox_util = { path = "../util", features = ["serde"] }

log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dirs = "6"

eframe = "0.31"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["bmp", "png"] }
egui-phosphor = "0.9"
egui-theme-switch = "0.3"
rfd = "0.15"
open = "5.3"
rust-i18n = "3"
tray-icon = "0.20.0"

rand = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serialport = "4.7"
picoboot-rs = "0.3"
rusb = "0.9"
uf2-decode = "0.2"

tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
async-trait = "0.1"
typetag = "0.2"
dyn-clone = "1.0"

reqwest = { version = "0.12", features = ["json"] }
obws = "0.14"
discord-rich-presence = { git = "https://github.com/NotQuiteApex/discord-rich-presence", branch = "voice-settings", optional = true }
# rustls = "0.23"
uuid = "1.16"
downcast-rs = "2.0"
sha1_smol = "1.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.2" }

[build-dependencies]
winresource = "0.1"

[features]
default = []
discord = ["dep:discord-rich-presence"]

[profile.release]
strip = true
