[package]
name = "jukebox_desktop"
version = "0.4.3"
edition = "2021"
build = "build.rs"
license = "MIT"

[dependencies]
jukebox_util = { path = "../util", features = ["serde"] }

log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dirs = "6"

eframe = "0.31"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["bmp", "png"] }
egui-phosphor = "0.9"
egui-theme-switch = "0.3"
rfd = "0.15"
open = "5.3"
rust-i18n = "3"
tray-icon = "0.20.0"

rand = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serialport = "4.7"
picoboot-rs = "0.3"
rusb = "0.9"
uf2-decode = "0.2"

tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }
futures = "0.3"

reqwest = { version = "0.12", features = ["json"] }
obws = "0.14"
discord-rich-presence = { git = "https://github.com/NotQuiteApex/discord-rich-presence", branch = "voice-settings" }
# rustls = "0.23"
uuid = "1.16"
sha1_smol = "1.0"

sysinfo = { version = "0.35", features = ["multithread"] }
rocm_smi_lib = { version = "0.3", features = ["device"], optional = true }
nvml-wrapper = { version = "0.11", optional = true }
semver = "1.0"
egui_commonmark = "0.20"
simple-logging = "2.0"
fd-lock = "4.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
pactl = { git = "https://github.com/NotQuiteApex/pactl-rs" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
] }

[build-dependencies]
winresource = "0.1"

[features]
default = []
discord = []
gpu = ["dep:nvml-wrapper", "dep:rocm_smi_lib"]

[profile.release]
strip = true
