[package]
edition = "2021"
name = "jukebox_firmware"
version = "0.1.0"
license = "MIT"

[dependencies]
jukebox_util = { path = "../util", features = ["defmt"] }
rp2040-hal = { version = "0.11", features = [
    "binary-info",
    "critical-section-impl",
    # "defmt",
    # "rom-func-cache",
    "rt",
] }
rp2040-boot2 = "0.3"
rp2040-flash = "0.6"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usb-device = "0.3"
usbd-human-interface-device = { version = "0.5" }
usbd-serial = "0.2"
ringbuffer = { version = "0.15", default-features = false }
pio = "0.2.1"
ws2812-pio = "0.9.0"
smart-leds = "0.4.0"
smart-leds-trait = "0.3"
mutually_exclusive_features = "0.1.0"
embedded-dma = "0.2.0"

[features]
default = []
keypad = []
knobpad = []
pedalpad = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
