[package]
name = "jukebox-firmware"
version = "0.5.0"
edition = "2024"
license = "MIT"

[dependencies]
jukebox_util = { path = "../util", features = ["defmt"] }

embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",

    "rp235xa",
    "imagedef-secure-exe",
    "binary-info",
] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = { version = "1", features = ["disable-blocking-mode"] }
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"

usbd-human-interface-device = "0.6"
usbd-serial = "0.2"

# ringbuffer = { version = "0.16", default-features = false }

# pio = "0.2"
# ws2812-pio = "0.9"
# smart-leds = "0.4"
# smart-leds-trait = "0.3"
# eeprom24x = { version = "0.7.2", features = ["defmt-03"] }

# mutually_exclusive_features = "0.1"

# embedded-dma = "0.2"
# embedded-graphics = { version = "0.8", features = ["fixed_point"] }
# embedded-graphics-framebuf = "0.5"
# mplusfonts = "0.2"

[features]
default = ["keypad"]
keypad = []
knobpad = []
pedalpad = []
