[package]
name = "jukebox_desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
jukebox_util = { path = "./jukebox_util" }
anyhow = "1.0.93"
dirs = "5.0.1"
eframe = "0.31"
egui-phosphor = "0.9"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.6.0"
egui-theme-switch = "0.3.0"
typetag = "0.2.20"
dyn-clone = "1.0.18"
open = "5.3.2"

[build-dependencies]
winresource = "0.1.17"
