[package]
name = "jukebox_desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
jukebox_util = { path = "./jukebox_util" }

log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dirs = "6"

eframe = "0.31"
egui-phosphor = "0.9"
egui-theme-switch = "0.3.0"
rfd = "0.15"
open = "5.3"
rust-i18n = "3"

rand = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serialport = "4.7"
picoboot-rs = "0.3"
rusb = "0.9"
uf2-decode = "0.2"

tokio = { version = "1.44", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"
typetag = "0.2"
dyn-clone = "1.0"

obws = "0.14"
discord-rich-presence-client = { path = "../../discord-rich-presence-client" }
reqwest = { version = "0.12.13", features = ["json", "blocking"] }
lazy_static = "1.5.0"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
strip = true
