[package]
name = "jukebox_util"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmatch = "0.1"
defmt = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
bincode = { version = "2", default-features = false, features = [
    "derive",
    "serde",
] }

[features]
default = []
defmt = ["dep:defmt"]
