[package]
name = "jukebox_util"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmatch = "0.1"
defmt = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
rgb = "0.8.52"
postcard = { version = "1.1.3", default-features = false }

[features]
default = []
defmt = ["dep:defmt"]
